fixed buttons and header styling and spacing

--- a/app/src/style.css
+++ b/app/src/style.css
@@ -67,7 +67,7 @@ a {
 
 .profile-card {
   /* padding: 40px 60px; */
-  margin: 32px;
+  margin: 32px 32px 0px 32px;
   border-radius: 2em;
 }
 
@@ -90,7 +90,8 @@ a {
   transform: translate(13%, -80%);
   color: white;
   font-weight: 700;
-  width: auto;
+  margin: max-content;
+  /* margin: auto; */
 }
 
 .card-body-height {
@@ -102,7 +103,8 @@ a {
   left: 13%;
   bottom: 15%; */
   transform: translate(13%, -250%);
-  width: auto;
+  margin: max-content;
+  /* margin: auto; */
 }
 
 hr {
@@ -147,7 +149,7 @@ hr {
 
 .info-card {
   padding: 40px 60px 40px 60px;
-  margin: 32px;
+  margin: 0px 32px;
   border-radius: 2em;
 }
 
@@ -199,6 +201,21 @@ hr {
   padding: 0;
 }
 
+/* need sep style for active/inactive button */
 .profile-btn {
+  border-radius: 50px;
+  height: 50px;
+  width: 200px;
+  margin: auto;
+  padding: auto;
 
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  font-size: 20px;
+  line-height: 23px;
+  font-family: 'all-round-gothic';
+  font-weight: 500;
 }
